feat: initialize Traffic Vision computer vision project with image processing pipeline, multithreaded detection services, and modular UI components